fixed header tab spacing issue

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -13,6 +13,10 @@
 
   background: transparent;
 
+  &.scrolled {
+    background-color: $white;
+  }
+
   .navbar-nav {
     margin-top: 17px;
     margin-right: 111px;
